subjects and experimenters can join the same session with different devices
- game now allows joining in with different devices (multiple connections) to the same places
- settings.ini now has more game environemnt info
- game logic is handled, added AI
- udpated tmp\echo for testing

--- a/settings.ini
+++ b/settings.ini
@@ -2,6 +2,10 @@
 IP			= 127.0.0.1
 PORT		= 8765
 LOG_FILE	= log\server.log
+WAIT        = 2
+MAX_GAMES_VR= 6
+MAX_GAMES_BEFORE=1
+MAX_GAMES_AFTER=1
 
 [NAMES]
 Joe         = 0
@@ -10,8 +14,8 @@ Kate        = 1
 
 [AVATARS]
 blond_man   = 0
-black_man   = 0
-black_woman = 1
+brunette_man= 0
+brunette_woman= 1
 
 [ENVIRONMENTS]
 default     = img\default.jpg
