added FPS limiting for transform sending
- added FPS limiting to avoid flooding (could be improved)
- this can be set in settings.ini
- strategy choice buttons are disabled while "looking for player" on frontend

--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,9 @@
 [SERVER]
-IP			= 192.168.10.104
+IP			= 192.168.10.74
 PORT		= 8765
 LOG_FILE	= log\server.log
 WAIT        = 1
+MAX_FPS     = 90
 MAX_GAMES_VR= 6
 MAX_GAMES_BEFORE=1
 MAX_GAMES_AFTER=1
